# bng36-wgs84-conversion

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
notebooks/: bng36-wgs84.ipynb  test.ipynb
src/bng36_wgs84_conversion/: app.py  main.py
src/bng36_wgs84_conversion/config/: env.py
tests/: test_api.py
